[gd_scene load_steps=23 format=2]

[ext_resource path="res://Steel Beams.png" type="Texture" id=1]
[ext_resource path="res://Paddle.gd" type="Script" id=2]
[ext_resource path="res://Laser.png" type="Texture" id=3]
[ext_resource path="res://Laser.gd" type="Script" id=4]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Ball.gd" type="Script" id=6]
[ext_resource path="res://Ball.png" type="Texture" id=7]
[ext_resource path="res://SpawnPos.gd" type="Script" id=8]
[ext_resource path="res://Player.png" type="Texture" id=10]
[ext_resource path="res://play.gd" type="Script" id=11]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.225, 0.325, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.18, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=5]
resource_name = "Death"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.225, 0.325, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Shoot"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.18, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5, 10 )

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="SphereMesh" id=9]

[sub_resource type="CircleShape2D" id=10]
radius = 0.99486

[sub_resource type="CircleShape2D" id=11]

[sub_resource type="DynamicFont" id=12]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 5 )

[node name="Gmae" type="Node2D"]
script = ExtResource( 11 )

[node name="Map" type="Node2D" parent="."]
z_index = -7

[node name="Wall Left" type="Node2D" parent="Map"]
position = Vector2( 0, -80 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="WallL" type="Sprite" parent="Map/Wall Left"]
position = Vector2( 32, 40 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="WallL2" type="Sprite" parent="Map/Wall Left"]
position = Vector2( 32, 552 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Wall" type="StaticBody2D" parent="Map/Wall Left"]
position = Vector2( 32, 40 )
scale = Vector2( 2, 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Wall Left/Wall"]
position = Vector2( 3.1, 3.05176e-05 )
scale = Vector2( 0.875, 1 )
polygon = PoolVector2Array( -21.8286, -128, 12.4571, -128, 12.4571, 384, -21.8286, 384 )

[node name="Wall RIght" type="Node2D" parent="Map"]
position = Vector2( -128, -80 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="WallR2" type="Sprite" parent="Map/Wall RIght"]
position = Vector2( 992, 552 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
flip_h = true

[node name="WallR" type="Sprite" parent="Map/Wall RIght"]
position = Vector2( 992, 40 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
flip_h = true

[node name="Wall" type="StaticBody2D" parent="Map/Wall RIght"]
position = Vector2( 992, 40 )
scale = Vector2( 2, 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Wall RIght/Wall"]
position = Vector2( 3.1, 3.05176e-05 )
scale = Vector2( 0.875, 1 )
polygon = PoolVector2Array( -19.5428, -128, 14.7429, -128, 14.7429, 384, -19.5428, 384 )

[node name="Background" type="Polygon2D" parent="Map"]
position = Vector2( 832, 344 )
scale = Vector2( 20, 20 )
z_index = -99
z_as_relative = false
color = Color( 0.262745, 0.941176, 0.972549, 1 )
polygon = PoolVector2Array( -44.4, -21.2, 58, -20.8, 58, 39.6, -44.4, 39.6 )

[node name="Paddle" type="Node2D" parent="."]
script = ExtResource( 2 )
MarginBoundary = 140

[node name="Point1" type="Node2D" parent="Paddle"]
position = Vector2( 2024, 440 )
__meta__ = {
"_edit_group_": true
}

[node name="PointBody" type="KinematicBody2D" parent="Paddle/Point1"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle/Point1/PointBody"]
scale = Vector2( 2.65, 2.65 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Paddle/Point1"]
root_node = NodePath("../Sprite")
anims/Death = SubResource( 2 )
anims/Shoot = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Paddle/Point1"]
rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
vframes = 4
hframes = 4
frame = 7

[node name="Point2" type="Node2D" parent="Paddle"]
position = Vector2( 2152, 440 )
rotation = 3.14159
__meta__ = {
"_edit_group_": true
}

[node name="PointBody" type="KinematicBody2D" parent="Paddle/Point2"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle/Point2/PointBody"]
scale = Vector2( 2.65, 2.65 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Paddle/Point2"]
root_node = NodePath("../Sprite")
anims/Death = SubResource( 5 )
anims/Shoot = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Paddle/Point2"]
rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
vframes = 4
hframes = 4
frame = 13

[node name="Laser" type="Node2D" parent="Paddle"]
position = Vector2( 2088, 440 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Beam" type="Sprite" parent="Paddle/Laser"]
scale = Vector2( 1, 2 )
z_index = -1
texture = ExtResource( 3 )

[node name="Paddle" type="StaticBody2D" parent="Paddle/Laser"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle/Laser/Paddle"]
scale = Vector2( 0.1, 0.5 )
shape = SubResource( 7 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 960, 540 )
collision_layer = 0
collision_mask = 11
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
base = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
visible = false
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 8 )

[node name="Ball" type="Sprite" parent="Ball"]
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Aura" type="Area2D" parent="Ball"]
visible = false
scale = Vector2( 20, 20 )
monitoring = false
collision_layer = 4
collision_mask = 0

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ball/Aura"]
scale = Vector2( 1.3, 1.3 )
z_index = -2
mesh = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/Aura"]
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 10 )

[node name="BombTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SpawnPos" type="Area2D" parent="."]
position = Vector2( 960, 320 )
monitorable = false
collision_layer = 0
collision_mask = 2147483663
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPos"]
scale = Vector2( 8, 8 )
shape = SubResource( 11 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 168.0
margin_top = 32.0
margin_right = 408.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 12 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="Paddle/Point1/AnimationPlayer" to="Paddle" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BombTimer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="SpawnPos" to="SpawnPos" method="_on_SpawnPos_area_entered"]
[connection signal="body_entered" from="SpawnPos" to="SpawnPos" method="_on_SpawnPos_body_entered"]
